--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
         <title>Boolfix</title>
     </head>
     <body>
+        <header>
+            <div class="container">
+                <div class="logo">Boolfix</div>
+                <div class="searchbar">
+                    <input type="text" placeholder="Cerca titolo...">
+                    <i class="fas fa-search fa-md"></i>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="container">
+
+            </div>
+        </main>
         <script src="main.js" charset="utf-8"></script>
     </body>
 </html>
