--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
             </div>
         </header>
         <main>
-            <div class="container">
-
-            </div>
+            <div class="mainview container"></div>
         </main>
+        <script id="template" type="text/x-handlebars-template">
+            <ul>
+                <li>Titolo: {{ title }}</li>
+                <li>Titolo Originale: {{ ori_title }}</li>
+                <li>Lingua: {{ language }}</li>
+                <li>Voto: {{ vote }}</li>
+            </ul>
+        </script>
         <script src="main.js" charset="utf-8"></script>
     </body>
 </html>
