Con la ricerca sul tasto search risponde bene, ora bisogna occuparsi del tasto invio e altre accortezze

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="logo">Boolfix</div>
                 <div class="searchbar">
                     <input type="text" placeholder="Cerca titolo...">
-                    <i class="fas fa-search fa-md"></i>
+                    <i id="search_icon" class="fas fa-search fa-md"></i>
                 </div>
             </div>
         </header>
