--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <li>Voto: {{ vote }}</li>
             </ul>
         </script>
+        <script id="template-error" type="text/x-handlebars-template">
+            <div>
+                <h2>{{ title }}</h2>
+                <p>{{ type_of_error }}</p>
+            </div>
+        </script>
         <script src="main.js" charset="utf-8"></script>
     </body>
 </html>
