Ho gestito le bandierine con uno switch case, non male

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul>
                     <li>Titolo: {{ title }}</li>
                     <li>Titolo Originale: {{ ori_title }}</li>
-                    <li>Lingua: {{ language }}</li>
+                    <li>Lingua: {{{ language }}} </li>
                     <li>Voto: {{{ vote }}}{{{ no_vote }}}</li>
                 </ul>
             </div>
