--- a/index.html
+++ b/index.html
@@ -20,10 +20,39 @@
             </div>
         </header>
         <main>
-            <div class="mainview container"></div>
+            <div class="mainview container">
+                <div class="card">
+                    <img class="background" src="images/no_poster.jpg" alt="poster">
+                    <ul>
+                        <li>Titolo: {{ title }}</li>
+                        <li>Titolo Originale: {{ ori_title }}</li>
+                        <li>Lingua: {{{ language }}} </li>
+                        <li>Voto: {{{ vote }}}{{{ no_vote }}}</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <img class="background" src="images/no_poster.jpg" alt="poster">
+                    <ul>
+                        <li>Titolo: {{ title }}</li>
+                        <li>Titolo Originale: {{ ori_title }}</li>
+                        <li>Lingua: {{{ language }}} </li>
+                        <li>Voto: {{{ vote }}}{{{ no_vote }}}</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <img class="background" src="images/no_poster.jpg" alt="poster">
+                    <ul>
+                        <li>Titolo: {{ title }}</li>
+                        <li>Titolo Originale: {{ ori_title }}</li>
+                        <li>Lingua: {{{ language }}} </li>
+                        <li>Voto: {{{ vote }}}{{{ no_vote }}}</li>
+                    </ul>
+                </div>
+            </div>
         </main>
         <script id="template" type="text/x-handlebars-template">
             <div class="card">
+                <img class="background" src="{{background}}" alt="poster">
                 <ul>
                     <li>Titolo: {{ title }}</li>
                     <li>Titolo Originale: {{ ori_title }}</li>
