In parte risolto il cast, ma mancano le serie tv

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><strong>Lingua:</strong> {{{ language }}} </li>
                     <li><strong>Voto:</strong> {{{ vote }}}{{{ no_vote }}}</li>
                     <!-- <li><strong>Overview:</strong> {{ overview }}</li> -->
-                    <li><strong>Cast:</strong> {{ cast }}</li>
+                    <li><strong>Cast:</strong> {{{ cast }}}</li>
                 </ul>
             </div>
         </script>
