Completato il discorso cast, ora quello 'generi' mi farà sudare

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><strong>Titolo Originale:</strong> {{ ori_title }}</li>
                     <li><strong>Lingua:</strong> {{{ language }}} </li>
                     <li><strong>Voto:</strong> {{{ vote }}}{{{ no_vote }}}</li>
-                    <!-- <li><strong>Overview:</strong> {{ overview }}</li> -->
+                    <li><strong>Overview:</strong> {{ overview }}</li>
                     <li><strong>Cast:</strong> {{{ cast }}}</li>
                 </ul>
             </div>
