Milestone5 terminata, è stata dura, ma richiamando le api dei generi dal sito, ho già tutto pronoto per la milestone6, a domani

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li><strong>Voto:</strong> {{{ vote }}}{{{ no_vote }}}</li>
                     <li><strong>Overview:</strong> {{ overview }}</li>
                     <li><strong>Cast:</strong> {{{ cast }}}</li>
+                    <span>{{{ generi }}}</span>
                 </ul>
             </div>
         </script>
