Filtro per generi, anche questo statico, e risponde: dopo pranzo rendiamo tutto dinamico

--- a/index.html
+++ b/index.html
@@ -14,13 +14,21 @@
             <div class="container">
                 <div class="logo">
                     Boolfix
-                    <select id="choice">
+                    <!-- <select id="choice">
                         <option value="">Seleziona Valutazione Film </option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
                         <option value="5">5</option>
+                    </select> -->
+                    <select id="choice_genre">
+                        <option value="">Seleziona Un Genere </option>
+                        <option value="Azione">Azione</option>
+                        <option value="Avventura">Avventura</option>
+                        <option value="Fantascienza">Fantascienza</option>
+                        <option value="Horror">Horror</option>
+                        <option value="Romantico">Romantico</option>
                     </select>
                 </div>
                 <div class="searchbar">
