Ho aggiunto una HomePage in cui ci sono i film trend del momento, per non lasciare una home completamente grigia

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <div class="container">
                 <div class="logo">
-                    Boolfix
+                    <a href="index.html">Boolfix</a>
                 </div>
                 <div class="searchbar">
                     <input type="text" placeholder="Cerca titolo...">
@@ -23,6 +23,12 @@
         </header>
         <main>
             <div class="mainview container">
+                <div id="trending">
+                    <div class="type-object">
+                        <h2>Trending Now:</h2>
+                    </div>
+                    <div class="card-wrapper"></div>
+                </div>
                 <div id="movie">
                     <div class="header-dynamic">
                         <div class="type-object">
